Projet total/Assembleur/tests/bad/testfile-bad-rz.ms
; register %rz is not visible to the programmer
add %rz %rz %rz